bridge/base/0-shoestore-namespace.yaml
#! 0-shoestore-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: shoestore
    labels:
        com.docker.compose.project: shoestore
