bridge/base/shoestore-deployment.yaml
#! shoestore-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: shoestore
    namespace: shoestore
    labels:
        com.docker.compose.project: shoestore
        com.docker.compose.service: shoestore
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: shoestore
            com.docker.compose.service: shoestore
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: shoestore
                com.docker.compose.service: shoestore
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: shoestore
                  image: nguyentt07/shoestore:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: shoestore-91
                      containerPort: 91
