bridge/base/db-expose.yaml
#! db-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db
    namespace: shoestore
    labels:
        com.docker.compose.project: shoestore
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: shoestore
        com.docker.compose.service: db
    ports:
        - name: db-1433
          port: 1433
          targetPort: db-1433
