bridge/base/db-service.yaml
# check if there is at least one published port

#! db-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: db-published
    namespace: shoestore
    labels:
        com.docker.compose.project: shoestore
        com.docker.compose.service: db
spec:
    selector:
        com.docker.compose.project: shoestore
        com.docker.compose.service: db
    ports:
        - name: db-1433
          port: 1433
          protocol: TCP
          targetPort: db-1433

# check if there is at least one published port
