bridge/base/shoestore-expose.yaml
#! shoestore-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: shoestore
    namespace: shoestore
    labels:
        com.docker.compose.project: shoestore
        com.docker.compose.service: shoestore
spec:
    selector:
        com.docker.compose.project: shoestore
        com.docker.compose.service: shoestore
    ports:
        - name: shoestore-91
          port: 91
          targetPort: shoestore-91
