bridge/base/shoestore-service.yaml
#! shoestore-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: shoestore-published
    namespace: shoestore
    labels:
        com.docker.compose.project: shoestore
        com.docker.compose.service: shoestore
spec:
    selector:
        com.docker.compose.project: shoestore
        com.docker.compose.service: shoestore
    ports:
        - name: shoestore-8888
          port: 8888
          protocol: TCP
          targetPort: shoestore-91
